--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: 方立春的技术个人博客
 
 # Short bio or description (displayed in the header)
-description: 只要分享一些技术博客
+description: 只分享一些技术文章
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
