--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 方立春的技术个人博客
 description: 只分享一些技术文章
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.githubassets.com/apple-touch-icon-144x144.png
 
 #
 # Flags below are optional
